RESOLVED FIXED79777
[GTK] Ignore resources while replacing content in WebKit2 GTK+ API
https://bugs.webkit.org/show_bug.cgi?id=79777
Summary [GTK] Ignore resources while replacing content in WebKit2 GTK+ API
Carlos Garcia Campos
Reported 2012-02-28 04:15:28 PST
The same way we ignore load events and progress, resources should be ignored too.
Attachments
Patch (10.76 KB, patch)
2012-02-28 04:21 PST, Carlos Garcia Campos
no flags
Updated patch (10.81 KB, patch)
2012-03-15 12:41 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2012-02-28 04:21:01 PST
Philippe Normand
Comment 2 2012-03-15 01:57:57 PDT
Comment on attachment 129229 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=129229&action=review > Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp:891 > + if (priv->replaceContentStatus == ReplacingContent || priv->replaceContentStatus == DidReplaceContent) > + return 0; I see this code used in 4 places. Can it be moved to a function?
Carlos Garcia Campos
Comment 3 2012-03-15 02:04:09 PDT
(In reply to comment #2) > (From update of attachment 129229 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=129229&action=review > > > Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp:891 > > + if (priv->replaceContentStatus == ReplacingContent || priv->replaceContentStatus == DidReplaceContent) > > + return 0; > > I see this code used in 4 places. Can it be moved to a function? Sure!
Carlos Garcia Campos
Comment 4 2012-03-15 12:41:22 PDT
Created attachment 132104 [details] Updated patch Rebased to apply on current git master and added helper function as phil suggested.
Carlos Garcia Campos
Comment 5 2012-03-27 05:45:34 PDT
Patches blocking this bug landed already.
Philippe Normand
Comment 6 2012-04-19 16:02:56 PDT
Comment on attachment 132104 [details] Updated patch Alright, looks good to me! Sorry for the review delay :(
Carlos Garcia Campos
Comment 7 2012-04-19 23:42:25 PDT
(In reply to comment #6) > (From update of attachment 132104 [details]) > Alright, looks good to me! Sorry for the review delay :( No problem, thanks for reviewing :-)
Carlos Garcia Campos
Comment 8 2012-04-19 23:45:07 PDT
Note You need to log in before you can comment on or make changes to this bug.