[GTK] Ignore resources while replacing content in WebKit2 GTK+ API https://bugs.webkit.org/show_bug.cgi?id=79777

Reviewed by Philippe Normand.

* UIProcess/API/gtk/WebKitResourceLoadClient.cpp:
(didSendRequestForResource): Return early if resources is Null.
(didReceiveResponseForResource): Ditto.
(didReceiveContentLengthForResource): Ditto.
(didFinishLoadForResource): Ditto.
(didFailLoadForResource): Ditto.
* UIProcess/API/gtk/WebKitWebView.cpp:
(webkitWebViewLoadChanged): Clear resources before checking
whether we are replacing content.
(webkitWebViewIsReplacingContentOrDidReplaceContent): Helper
function to check whether view is replacing content or current
content is replaced.
(webkitWebViewResourceLoadStarted): Do not create resources when
replacing content.
(webkitWebViewGetLoadingWebResource): Ignore when replacing
content. Also add an assert when getting a loading resources to
make sure we only return Null when replacing content.
(webkitWebViewRemoveLoadingWebResource): Ditto.
(webkitWebViewResourceLoadFinished): Ditto.
* UIProcess/API/gtk/tests/TestResources.cpp:
(replacedContentResourceLoadStartedCallback):
(testWebViewResourcesReplacedContent):
(beforeAll):

Canonical link: https://commits.webkit.org/101915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114719 268f45cc-cd09-0410-ab3c-d52691b4dbfc